--- a/Contact.html
+++ b/Contact.html
@@ -51,7 +51,7 @@
                                 <p>Email:-information@CBIT.co.in</p>
                     </div>
                     <div class="column">
-                        <form action="/action_page.php">
+                        <form action="mailto:vijayvardhan947@gmail.com" method="POST" enctype="text/plain">
                             <label for="fname">First Name</label>
                             <input type="text" id="fname" name="firstname" placeholder="Your name..">
                             <label for="lname">Last Name</label>
